--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+spring.data.rest.base-path=/api
